tests/interpreter/pass/300-relOps.hyg
assert(6 <= 7);
assert(6 > 5);
assert(6 >= 6)