tests/interpreter/fail/300-relOps.hyg
assert(6 >= 7);
assert(6 < 6);
assert(6 <= 5)